@@ -8,7 +8,7 @@
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
     <summary>The base class for <see cref="T:Gtk.ProgressBar"/>.</summary>
-    <remarks>A <see cref="T:Gtk.Progress"/> is the abstract base class used to derive a <see cref="T:Gtk.ProgressBar"/>which provides a visual representation of the progress of a long running operation.</remarks>
+    <remarks>A <see cref="T:Gtk.Progress"/> is the abstract base class used to derive a <see cref="T:Gtk.ProgressBar"/> which provides a visual representation of the progress of a long running operation.</remarks>
   </Docs>
   <Base>
     <BaseTypeName>Gtk.Widget</BaseTypeName>
