@@ -176,7 +176,7 @@ btn.Add(label);
       <Docs>
         <summary>Creates a new <see cref="T:Gtk.ToggleButton" /> with a text label.</summary>
         <param name="label">a <see cref="T:System.String" /> containing the message to be placed in the toggle button.</param>
-        <returns>an object of type '<see cref="T:Gtk.ToggleButton" /></returns>
+        <returns>an object of type <see cref="T:Gtk.ToggleButton" /></returns>
         <remarks>Creates a new <see cref="T:Gtk.ToggleButton" /> with a text label.
 				<example>
             <code lang="C#">ToggleButton btn = new ToggleButton ("ToggleButton");</code>
