@@ -14,7 +14,7 @@
 			<para>An individual tooltip belongs to a group of tooltips.
 				A group is created by calling the constructor <see cref="C:Gtk.Tooltips()"/>.
 				Every tooltip in the group can then be turned off with <see cref="M:Gtk.Tooltips.Disable()"/> and on with <see cref="M:Gtk.Tooltips.Enable()"/>.</para>
-			<para>To assign a tip to a particular <see cref="T:Gtk.Widget"/>, <see cref="M:Gtk.Tooltips.SetTip(widget, string, string)"/> is used.</para>
+			<para>To assign a tip to a particular <see cref="T:Gtk.Widget"/>, <see cref="M:Gtk.Tooltips.SetTip(Gtk.Widget,System.String,System.String)"/> is used.</para>
 			<para>Note: Tooltips can only be set on widgets which have their own X window.
 				To add a tooltip to a <see cref="T:Gtk.Widget"/> that does not have its own <see cref="T:Gtk.Window"/>, place the widget inside a <see cref="T:Gtk.EventBox"/> and add a tooltip to that instead.</para>
 			<para>The default appearance of all tooltips in a program is determined by the current Gtk theme that the user has selected.</para>
