@@ -1,3 +1,10 @@
+2003-05-30  John Luke  <jluke@cfl.rr.com>
+
+	* en/Gtk/ToggleButton.xml: Fix typo.
+	* en/Gtk/Progress.xml: Fix typo.
+	* en/Gtk/Tooltips.xml: Fix method signature.
+	* en/Gtk/Button.xml: Add some info.
+
 2003-05-29  Lee Mallabone  <gnome@fonicmonkey.net>
 
 	* en/*Sharp/*.xml: Remove the internal void*.xml signal docs.
